[package]
name = "mes-core"
version = "0.1.0"
edition = "2021"
description = "Yet another NES emulator"
license = "MIT"
repository = "https//github.com/luckasRanarison/mes"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]

[features]
default = []
json = ["serde", "serde_json"]

[dependencies]
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
