[package]
name = "mes-wasm"
version = "0.1.0"
edition = "2021"
description = "mes-core WASM bindings"
license = "MIT"
repository = "https//github.com/luckasRanarison/mes"
authors = ["LIOKA Ranarison Fiderana <luckasranarison@gmail.com>"]

[dependencies]
mes-core = { path = "../mes-core" }
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.72", features = ["ImageData"] }

[lib]
crate-type = ["cdylib", "rlib"]
